--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>mobilemall</title>
   </head>
   <body>
+    <!-- iphone5 1rem = 16px -->
     <div id="app">
     </div>
     <!-- built files will be auto injected -->
